update to Assignment1

--- a/Assignment1-Website/homePage.html
+++ b/Assignment1-Website/homePage.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Brandon's Website</title>
-        <link rel= "stylesheet" type="text/css" href="style.css">
+        <link rel= "stylesheet" type="text/css" href="style.css" media="only screen and (min-width: 960px)">
+        <link rel= "stylesheet" type="text/css" href="tablet.css" media="only screen and (min-width: 481px) and (max-width: 959px)">
+        <link rel= "stylesheet" type="text/css" href="mobile.css" media="only screen and (max-width: 480px)">
     </head>
     <body>
         <div id="wrapper">
@@ -23,6 +25,12 @@
 
 
         </section>
+        <div id="left-column">
+
+        </div>
+        <div id="right-column">
+            
+        </div>
 
 
 
@@ -30,8 +38,13 @@
 
 
 
-
+        <div class="clear"></div>
         <footer>
+            &copy; Copyright 2023 Brandon Redman
+            <address>
+                <p>Contact me at <a href="mailto:bredman1@ontariotechu.net">bredman1@ontariotechu.net</a></p>
+
+            </address>
             <nav>
                 <h5>
                 <a href="homePage.html">Home</a>
