rename home page file

--- a/Assignment1Website/projectPage.html
+++ b/Assignment1Website/projectPage.html
@@ -13,7 +13,7 @@
             <h1>WELCOME TO MY PROJECT PAGE!</h1>
             <nav>
                 <h4>
-                <a href="homePage.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="aboutPage.html">About</a>
                 <a href="projectPage.html">Project</a>
                 <a href="contactPage.html">Contact</a>
